migration from CRA to Vite React

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,9 +8,14 @@
   --bulma-link-h: 170deg;
   --bulma-link-s: 98%;
   --bulma-link-l: 38%;
+  --bulma-info-h: 233deg;
+  --bulma-info-s: 98%;
+  --bulma-info-l: 63%;
   --bulma-duration: 150ms;
   --black: black;
   --light-gray: #f0f0f0f0;
+  --link: hsl(var(--bulma-link-h), var(--bulma-link-s), var(--bulma-link-l));
+  --info: hsl(var(--bulma-info-h), var(--bulma-info-s), var(--bulma-info-l));
 }
 
 *,
@@ -109,10 +114,13 @@ body {
   }
 
   .menu-link:hover {
-    transition: 0.2s;
+    transition: 0.1s;
     color: grey;
   }
-
+  .home-link:hover {
+    background-color: var(--info)!important; /* Bulma's primary color or any color you want */
+    color: white !important;
+  }
   .navbtn-container {
     display: flex;
     justify-content: space-between;
@@ -248,53 +256,52 @@ body {
     width: 100%;
     overflow: hidden;
     background-color: #f0f0f0f0;
-}
+  }
 
-.card-right img {
+  .card-right img {
     object-fit: cover;
-}
+  }
 
-@keyframes fadeAnimation {
-    0%, 20% {
-        opacity: 1; /* Image fully visible */
+  @keyframes fadeAnimation {
+    0%,
+    20% {
+      opacity: 1; /* Image fully visible */
     }
-    30%, 100% {
-        opacity: 0; /* Image fades out and remains hidden */
+    30%,
+    100% {
+      opacity: 0; /* Image fades out and remains hidden */
     }
-}
+  }
 
-.fade-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  object-fit: cover;
-  opacity: 0; /* Ensure initial state is invisible */
-  animation: fadeAnimation 9s infinite;
-  animation-fill-mode: forwards; /* Persist animation state */
-}
+  .fade-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    object-fit: cover;
+    opacity: 0; /* Ensure initial state is invisible */
+    animation: fadeAnimation 9s infinite;
+    animation-fill-mode: forwards; /* Persist animation state */
+  }
 
-
-.fade-image:nth-child(1) {
+  .fade-image:nth-child(1) {
     animation-delay: 0s; /* Starts immediately */
-}
+  }
 
-.fade-image:nth-child(2) {
+  .fade-image:nth-child(2) {
     animation-delay: 3s; /* Starts during the fade-out of the first image */
-}
+  }
 
-.fade-image:nth-child(3) {
+  .fade-image:nth-child(3) {
     animation-delay: 6s; /* Starts during the fade-out of the second image */
-}
+  }
 
-.note{
-  list-style: circle;
-  background-color: #c8c8c8f0;
-  border-radius: 5px;
-  padding: 1em;
-}
-
-
+  .note {
+    list-style: circle;
+    background-color: #c8c8c8f0;
+    border-radius: 5px;
+    padding: 1em;
+  }
 
   /* User Logged in */
   .nav-user-container {
