--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -114,12 +114,13 @@ body {
 
 .custom-loader-spinner {
   border: 8px solid #222;
-  border-top: 8px solid #00d1b2;
+  border-top: 8px solid white;
   border-radius: 50%;
   width: 64px;
   height: 64px;
-  animation: spin 1s linear infinite;
+  animation: spin 0.8s linear infinite;
 }
+
 @keyframes spin {
   to {
     transform: rotate(360deg);
@@ -495,7 +496,7 @@ body {
   }
   /* Page Body */
   .page-body {
-    margin: 2em; 
+    margin: 2em;
   }
 
   .box-wrapper {
@@ -505,7 +506,7 @@ body {
 
   .box-container-1,
   .box-container-2 {
-    width: 100%; 
+    width: 100%;
     margin: 3em 0;
   }
   .about-us {
